--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="logo link" href="./index.html"
             >Web<span class="header-logo">Studio</span></a
           >
-          <ul class="menu list">
+          <ul class="list menu">
             <li class="list-item">
               <a class="item link" href="./index.html">Studio</a>
             </li>
@@ -49,7 +49,7 @@
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="address list">
+          <ul class="list address">
             <li class="contact-item">
               <a class="contact link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -78,8 +78,8 @@
       <!-- Second Section -->
       <section class="second-section">
         <div class="container">
-          <h2 class="visually-hidden">List</h2>
-          <ul class="info list">
+          <h2 class="visually-hidden">Info</h2>
+          <ul class="list info">
             <li class="info-card">
               <div class="icon-container">
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64">
@@ -139,7 +139,7 @@
       <section class="third-section">
         <div class="container">
           <h2 class="header-title">What are we doing</h2>
-          <ul class="service list">
+          <ul class="list service">
             <li class="service-info">
               <img src="./images/img1.jpg" width="360" alt="computer-monitor" />
             </li>
@@ -163,7 +163,7 @@
           <h2 class="header-title">Our Team</h2>
 
           <!-- Team Member 1 -->
-          <ul class="team list">
+          <ul class="list team">
             <li class="team-member">
               <img
                 src="./images/man-with-laptop.jpg"
@@ -174,7 +174,7 @@
                 <h3 class="list-header">Mark Guerrero</h3>
                 <p class="list-text">Product Designer</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <ul class="socmed-info">
+                <ul class="list socmed-info">
                   <!-- Instagram -->
                   <li class="socmed-items">
                     <a href="" class="socmed-link">
@@ -245,7 +245,7 @@
                 <h3 class="list-header">Tom Ford</h3>
                 <p class="list-text">Frontend Developer</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <ul class="socmed-info">
+                <ul class="list socmed-info">
                   <!-- Instagram -->
                   <li class="socmed-items">
                     <a href="" class="socmed-link">
@@ -316,7 +316,7 @@
                 <h3 class="list-header">Camila Garcia</h3>
                 <p class="list-text">Marketing</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <ul class="socmed-info">
+                <ul class="list socmed-info">
                   <!-- Instagram -->
                   <li class="socmed-items">
                     <a href="" class="socmed-link">
@@ -387,7 +387,7 @@
                 <h3 class="list-header">Daniel Wilson</h3>
                 <p class="list-text">UI Designer</p>
                 <!-- HW4 Socmed SVG Icons -->
-                <ul class="socmed-info">
+                <ul class="list socmed-info">
                   <!-- Instagram -->
                   <li class="socmed-items">
                     <a href="" class="socmed-link">
@@ -449,18 +449,175 @@
           </ul>
         </div>
       </section>
+
+      <!-- Fifth Section -->
+      <section class="fifth-section">
+        <div class="container">
+          <h2 class="header-title">Customers</h2>
+          <ul class="list customer">
+            <!-- Cleint 1 -->
+            <li class="customer-list">
+              <a href="" class="customer-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="104"
+                  height="56"
+                  class="customer-icon"
+                >
+                  <use href="./images/icons.svg#client-1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Client 2 -->
+            <li class="customer-list">
+              <a href="" class="customer-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="104"
+                  height="56"
+                  class="customer-icon"
+                >
+                  <use href="./images/icons.svg#client-2"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Client 3 -->
+            <li class="customer-list">
+              <a href="" class="customer-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="104"
+                  height="56"
+                  class="customer-icon"
+                >
+                  <use href="./images/icons.svg#client-3"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Client 4 -->
+            <li class="customer-list">
+              <a href="" class="customer-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="104"
+                  height="56"
+                  class="customer-icon"
+                >
+                  <use href="./images/icons.svg#client-4"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Client 5 -->
+            <li class="customer-list">
+              <a href="" class="customer-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="104"
+                  height="56"
+                  class="customer-icon"
+                >
+                  <use href="./images/icons.svg#client-5"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Client 6 -->
+            <li class="customer-list">
+              <a href="" class="customer-link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="104"
+                  height="56"
+                  class="customer-icon"
+                >
+                  <use href="./images/icons.svg#client-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html"
-          >Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <!-- Logo & Text -->
+        <div class="wrapper">
+          <a class="logo link" href="./index.html"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <!-- Social Media -->
+        <div class="wrapper">
+          <p class="footer-socmed-header">Social media</p>
+          <ul class="list footer-socmed">
+            <!-- Instagram Icon -->
+            <li class="footer-socmed-icon">
+              <a href="" class="footer-socmed-link">
+                <svg
+                  class="footer-socmed-svg"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#instagram-footer"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Twitter Icon -->
+            <li class="footer-socmed-icon">
+              <a href="" class="footer-socmed-link">
+                <svg
+                  class="footer-socmed-svg"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#twitter-footer"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- Facebook Icon -->
+            <li class="footer-socmed-icon">
+              <a href="" class="footer-socmed-link">
+                <svg
+                  class="footer-socmed-svg"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#facebook-footer"></use>
+                </svg>
+              </a>
+            </li>
+
+            <!-- LinkedIn Icon -->
+            <li class="footer-socmed-icon">
+              <a href="" class="footer-socmed-link">
+                <svg
+                  class="footer-socmed-svg"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#linkedin-footer"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
