--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
     <!-- Main -->
     <main>
-      <!-- First Section -->
-      <section class="first-section">
-        <div class="container">
+      <!-- Hero Section -->
+      <section class="hero-section">
+        <div class="container hero-container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
